--- a/css/main.css
+++ b/css/main.css
@@ -87,3 +87,8 @@ body {
   color: var(--yello-color);
 }
 /* End Features */
+/* Start our-work */
+.our-work {
+  background-color: var(--section-color);
+}
+/* End our-work */
