--- a/css/main.css
+++ b/css/main.css
@@ -91,4 +91,37 @@ body {
 .our-work {
   background-color: var(--section-color);
 }
+.our-work ul .active {
+  background-color: var(--red-color);
+  color: var(--yello-color);
+}
+.our-work ul li {
+  padding: 0.5rem 1rem;
+  cursor: pointer;
+}
+.our-work ul li:not(.active):hover {
+  color: var(--red-color);
+}
+.our-work .box {
+  padding: 5px;
+  position: relative;
+  overflow: hidden;
+}
+.our-work .box::before {
+  content: attr(data-work);
+  position: absolute;
+  background-color: #33d1cc74;
+  width: calc(100% - 10px);
+  height: calc(100% - 10px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: 0.5s;
+  transform: translateX(calc(-100% - 5px));
+  color: white;
+  font-weight: bold;
+}
+.our-work .box:hover:before {
+  transform: translateX(0);
+}
 /* End our-work */
