--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,7 @@ body {
   position: absolute;
   width: 120px;
   height: 2px;
-  background-color: var(--green-color);
+  background-color: var(--red-color);
   transform: translateX(-50%);
   bottom: -20px;
   left: 50%;
