--- a/css/main.css
+++ b/css/main.css
@@ -126,11 +126,20 @@ body {
 }
 /* End our-work */
 /* Start Stuff */
-.stuff {
-
-}
 .stuff .description {
   max-width: 500px;
   font-size: 13px;
 }
 /* End Stuff */
+/* Start Team */
+.team {
+  background-color: var(--section-color);
+}
+.team .text {
+  font-size: 16px;
+}
+.team .text h2 {
+  color: var(--yello-color);
+
+}
+/* End Team */
