--- a/css/main.css
+++ b/css/main.css
@@ -142,4 +142,28 @@ body {
   color: var(--yello-color);
 
 }
+.team .text h4 {
+  background-color: var(--green-color);
+}
 /* End Team */
+/* Start Project */
+.project {
+  background-color: var(--dark-color);
+}
+/* End Project */
+/* Start Blog */
+/* .blog .box {
+  border: 1px solid #eee;
+  margin-bottom: 10px;
+}
+.blog .box .card-body {
+  padding: 10px;
+  margin-bottom: 10px;
+}
+.blog h5 {
+  font-size: 16px;
+}
+.blog span {
+  font-size: 12px;
+} */
+/* End Blog */
