Added Footer And finsh this Project

--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,6 @@
 }
 body {
   font-family: 'Roboto', sans-serif;
-  height: 10000px;
 }
 /* Start Navbar */
 .main-title::after {
@@ -167,3 +166,38 @@ body {
   font-size: 12px;
 } */
 /* End Blog */
+/* Start Subscribe */
+.subscribe {
+  background-color: var(--yello-color);
+}
+.subscribe input[type="text"] {
+  border: none;
+  border-bottom: 1px solid white;
+}
+.subscribe input[type="text"]:focus {
+  outline: none;
+}
+.subscribe input[type="submit"] {
+  background-color: var(--dark-color);
+  color: var(--yello-color);
+}
+.subscribe input[type="submit"]::placeholder {
+  display: none;
+}
+@media (max-width: 767px) {
+  .subscribe .row .help {
+    margin-bottom: 30px;
+  }
+}
+/* End Subscribe */
+/* Start Footer */
+.footer {
+  background-color: var(--dark-color);
+}
+.footer span:first-child {
+  color: var(--green-color);
+}
+.footer span:last-child {
+  color: var(--yello-color);
+}
+/* End Footer */
